PZ-164 | Java OpenJDK 17 LTS Migration (PearlZip and Zip4j Plugin)
+ Upgraded PearlZip and Zip4J JDK requirements to JDK 17 LTS
+ Updated modularised dependencies to be compiled with JDK 17
+ Removed preview switch from compilation
+ Updated build scripts to utilise and check for JDK 17 in environment

Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>